@@ -32,7 +32,7 @@ void BezierTool::begin(const Point& point, bool right, float zoom)
 	if(right) {
 		if(m_points.size()>2) {
 			m_points.pop_back();
-			m_points.last().point = point;
+			m_points.last() = {point, QPointF()};
 			m_beginPoint = point;
 
 		} else {
@@ -128,10 +128,13 @@ void BezierTool::undoMultipart()
 {
 	if(!m_points.isEmpty()) {
 		m_points.pop_back();
-		if(m_points.size() <= 1)
+		if(m_points.size() <= 1) {
 			cancelMultipart();
-		else
+		}
+		else {
+			m_points.last().cp = QPointF();
 			updatePreview();
+		}
 	}
 }
 
