@@ -1,6 +1,7 @@
 Unreleased Version 2.2.2-pre
  * Server Feature: Allow adding a message when kicking someone through the admin API.
  * Fix: Don't mess up strokes when hitting undo while still actively drawing them. Thanks Sinamer for reporting.
+ * Fix: Properly reset angle when undoing a point with the curve tool.
 
 2024-02-18 Version 2.2.1
  * Fix: Default to previous directory when saving a fresh file. Thanks Crow for reporting.
